--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Responsive Example</title>
 </head>
 <body>
-    <h1>Responsive Example</h1>
+    <header>
+        <h1>Responsive Example</h1>
+    </header>
+    <div class="hero">
+        <h2>This is the hero heading</h2>
+        <p>This is the tagline for the website</p>
+    </div>
+    <section class="gallery">
+        <h2>Gallery Name</h2>
+        <div class="gallery-images">
+            <img src="./images/example1.jpg" alt="image description">
+            <img src="./images/example2.jpg" alt="image description">
+            <img src="./images/example3.jpg" alt="image description">
+            <img src="./images/example4.jpg" alt="image description">
+            <img src="./images/example5.jpg" alt="image description">
+            <img src="./images/example6.jpg" alt="image description">
+        </div>
+    </section>
+
 </body>
 </html>
