--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Example</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <h1>Responsive Example</h1>
+        <h1>Responsive Example</h1> 
     </header>
     <div class="hero">
         <h2>This is the hero heading</h2>
