--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Responsive Example</h1> 
     </header>
-    <div class="hero">
+    <div class="hero" id="test">
         <h2>This is the hero heading</h2>
         <p>This is the tagline for the website</p>
     </div>
