--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <header>
         <h1>Responsive Example</h1> 
     </header>
-    <div class="hero" id="test">
-        <h2>This is the hero heading</h2>
+    <div class="hero">
+        <h2 class="rem-heading">This is 2rem</h2>
+        <h2 class="px-heading">This is 32px</h2>
+        <h2 class="em-heading">This is 2em</h2>
         <p>This is the tagline for the website</p>
     </div>
     <section class="gallery">
